--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -326,7 +326,7 @@
                 <td>-</td>
                 <td>-</td>
             </tr>
-            <tr>
+            <tr><!-- Tu integriraj -->
                 <td class="work-type">Početak rada</td>
                 <td>-</td>
                 <td>07</td>
