--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -45,9 +45,35 @@
         padding: 8px;
         border: 1px solid #dee2e6;
         }
-        td.weekend {
-            background-color: #FFEE97;
-        }
+
+        /* Style for weekends (Saturday and Sunday) */
+td.weekend {
+    background-color: #f4f4f4;  /* Light grey */
+    color: #d32f2f; /* Red color for text */
+}
+
+/* Style for holidays */
+td.holiday {
+    background-color: #ffeb3b;  /* Yellow background */
+    color: #1976d2;  /* Blue color for text */
+}
+
+/* Additional styles for total column */
+#work-type {
+    text-align: center;
+    font-weight: bold;
+}
+
+/* Optionally, add more styling for table and cells */
+#workHoursTable th, #workHoursTable td {
+    padding: 8px;
+    text-align: center;
+    border: 1px solid #ddd;
+}
+
+<!--        td.weekend {-->
+<!--            background-color: #FFEE97;-->
+<!--        }-->
         #work-type {
             text-align: left !important;
             font-weight: 500;
