--- a/src/main/resources/templates/head_nurse_employee_list.html
+++ b/src/main/resources/templates/head_nurse_employee_list.html
@@ -135,7 +135,7 @@
                 <input type="search" id="searchInput" class="form-control search-input" placeholder="Pretraži zaposlenike...">
             </div>
             <div>
-                <button class="btn btn-secondary" type="button" data-bs-toggle="offcanvas" data-bs-target="#filterDrawer" aria-controls="filterDrawer">
+                <button class="btn btn-warning" type="button" data-bs-toggle="offcanvas" data-bs-target="#filterDrawer" aria-controls="filterDrawer">
                     <i class="bi bi-funnel"></i> Filtriraj
                 </button>
                 <button class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#addEmployeeModal">
