--- a/src/main/resources/templates/employee_workhour_add.html
+++ b/src/main/resources/templates/employee_workhour_add.html
@@ -53,7 +53,7 @@
                     <i class="bi bi-person-circle fs-4"></i> <!-- Dodano fs-4 za veći font-size -->
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
-                    <li class="px-3 py-1 text-muted" th:text="${appUser.appRole.roleName}">Admin</li>
+                    <li class="px-3 py-1 text-muted" th:text="${appUser.roleName}">Admin</li>
                     <li class="px-3 pb-2 text-muted small" th:text="${appUser.email}">admin@example.com</li>
 <!--                    <li><a class="dropdown-item" href="#"><i class="bi bi-person"></i> Profil</a></li>-->
 <!--                    <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Postavke</a></li>-->
