--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -48,14 +48,14 @@
 
         /* Style for weekends (Saturday and Sunday) */
 td.weekend {
-    background-color: #f4f4f4;  /* Light grey */
-    color: #d32f2f; /* Red color for text */
+    background-color: #e6e6e6;  /* Light grey */
+    /* color: #d32f2f;  Red color for text */
 }
 
 /* Style for holidays */
 td.holiday {
     background-color: #ffeb3b;  /* Yellow background */
-    color: #1976d2;  /* Blue color for text */
+    /* color: #1976d2;   Blue color for text */
 }
 
 /* Additional styles for total column */
@@ -531,6 +531,7 @@ td.holiday {
         </div>
         <!-- mjesec i godina u hidden polju -->
         <button type="submit" class="btn btn-dark w-100">Spremi</button>
+        <button type="" class="btn btn-danger w-100">Obriši smjenu</button>
     </form>
 </div>
 
