--- a/src/main/resources/templates/head_nurse_employee_workhour.html
+++ b/src/main/resources/templates/head_nurse_employee_workhour.html
@@ -19,7 +19,9 @@
         .info-section {
             background-color: white;
             border-radius: 4px;
-            padding: 20px;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-top: 10px;
             margin-bottom: 20px;
         }
         .schedule-table {
@@ -143,6 +145,7 @@
 <body>
 <div id="overlay"></div>
 
+
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <div class="navbar-nav">
@@ -177,7 +180,7 @@
     </div>
 </nav>
 
-<!--<button onclick="location.href = '/head_nurse/employee/list'" class="btn btn-dark m-2 ms-3">Natrag</button>-->
+<button onclick="location.href = '/head_nurse/employee/list'" class="btn btn-dark ms-3 mt-2" style="width: 90px">Natrag</button>
 
 <div class="container-fluid">
     <!-- Employee Info -->
