delete to test controller

--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -571,8 +571,8 @@ td.holiday {
                                 <p id="errorMessage"></p>
                             </div>
                             <div class="d-flex justify-content-between">
-                                <button type="button" class="btn btn-danger" id="btnDelete">Obriši</button>
-                                <button type="submit" class="btn btn-dark">Spremi</button>
+                                <button type="submit" class="btn btn-danger" id="btnDelete" name="delete">Obriši</button>
+                                <button type="submit" class="btn btn-dark" name="save">Spremi</button>
                             </div>
                         </form>
                     </div>
