--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -310,7 +310,7 @@ td.holiday {
                                 <button id="btnDnevna" class="btn btn-outline-dark me-2">Dnevna</button>
                                 <button id="btnNocna" class="btn btn-outline-dark">Noćna</button>
                             </div>
-                            <form id="workTimeForm" action="/employee/workhour/process">
+                      <form id="workTimeForm" action="/employee/workhour/process">
                                 <input type="hidden" name="selectedColumn" id="selectedColumn">
                             <div class="mb-3">
                                 <label for="startShift" class="form-label">Početak radnog vremena</label>
@@ -324,8 +324,8 @@ td.holiday {
                                 <p id="errorMessage"></p>
                             </div>
                             <div class="d-flex justify-content-between">
-                                <button type="button" class="btn btn-danger">Obriši</button>
-                                <button type="submit" class="btn btn-dark">Spremi</button>
+                                <button type="button" class="btn btn-danger" id="obrisiButton">Obriši</button>
+                                <button type="submit" class="btn btn-dark" id="spremiButton">Spremi</button>
                             </div>
                         </form>
                     </div>
@@ -357,6 +357,19 @@ td.holiday {
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+    document.getElementById('obrisiButton').addEventListener('click', function(event) {
+        event.preventDefault();
+        document.getElementById('workTimeForm').action = '/employee/workhour/remove';
+        document.getElementById('workTimeForm').submit();
+    });
+
+    document.getElementById('spremiButton').addEventListener('click', function(event) {
+        // No need to change the action attribute, the default action will be used
+        // You can add additional logic here if needed
+    });
+</script>
 
 <script type="module" th:src="@{/scripts/calendarDisplay.js}"></script>
 <script th:src="@{/scripts/employeeWorkHoursFormDisplay.js}"></script>
