--- a/src/main/resources/templates/employee_workhour_list.html
+++ b/src/main/resources/templates/employee_workhour_list.html
@@ -249,7 +249,7 @@ td.holiday {
                             <input type="month" id="monthYearSelection">
                         </div>
                         <div class="col-md-6 d-flex justify-content-center">
-                            <p class="mb-0 ps-4"><strong>Propisani mjesečni fond sati:</strong> 184</p>
+                            <p class="mb-0 ps-4"><strong>Propisani mjesečni fond sati:</strong>&nbsp;<span id="prescribed-hours">184</span></p>
                         </div>
                     </div>
                 </div>
